# hs-openid-simple

./: README.markdown  Setup.hs  openid-simple.cabal
examples/: simple.hs
src/Network/OpenID/: Simple.hs
